# hf_transformers

./: .gitignore  1b.py  1b_llama.py  README.md  index.py  llama_1b.py  pyproject.toml  test_syntax.py
tutorial/: 0_pipeline.py  1_auto_class.py  2_preprocessing_data.py  3_fine_tuning_model.py
